2004-12-15  Raja R Harinath  <rharinath@novell.com>

	* configure.in ($mcsdir/build/config.make): Use $mcsdir relative
	to the $srcdir.  Fix definition of 'prefix'.

2004-12-14  Raja R Harinath  <rharinath@novell.com>

	* runtime/mono-wrapper.in (MONO_SHARED_DIR): Set.  Ensures that
	state isn't shared between an installed runtime and the in-tree
	runtime, and also ensure that both 'make check' and 'make
	distcheck' can run in parallel.
	* runtime/Makefile.am (clean-local): Remove the .wapi directory.

2004-12-09  Raja R Harinath  <rharinath@novell.com>

	* README: Update with details about the new build setup.

2004-12-08  Raja R Harinath  <rharinath@novell.com>

	* Makefile.am (get-monolite-latest): Update to new location of
	bootstrap files in the mcs/ tree.

2004-12-07  Raja R Harinath  <rharinath@novell.com>

	* configure.in: Set 'tar-pax' option for automake-1.9.

2004-12-07  Raja R Harinath  <rharinath@novell.com>

	* runtime/Makefile.am (uninstall): New.

2004-12-06  Zoltan Varga  <vargaz@freemail.hu>

	* configure.in: Disable -Wcast-align on sparc.

Mon Dec 6 15:00:53 CET 2004 Paolo Molaro <lupus@ximian.com>

	* configure.in: add option to disable some features of
	the runtime to create a smaller binary.

2004-12-03  Raja R Harinath  <rharinath@novell.com>

	* configure.in (ENABLE_NUNIT_TESTS): New.
	* runtime/Makefile.am (check-local): Use it to disable nunit
	tests.  Ensure that the test dlls are always built, however.

2004-12-03  Raja R Harinath  <rharinath@novell.com>

	* Makefile.am (dist-hook): Ensure we use the 'default' profile.
	* mono/Makefile.am (HANDLES): New.  Disable 'handles' dir on Win32.
	(SUBDIRS): Use it.  Move 'cil' before 'metadata'.
	* runtime/Makefile.am (install-exec): Pass
	RUNTIME_HAS_CONSISTENT_GACDIR to the mcs/ build.

2004-12-01  Neale Ferguson <Neale.Ferguson@SoftwareAG-usa.com>

	* configure.in : Add a flag for systems which pass parameters in
	registers as well as the stack.
